# advent-of-code-2022

./: README.md  new-day.bash
common/: common.cabal
common/Data/: Chart.hs
common/Data/Graph/: Search.hs
common/Data/Vector/: V2.hs
common/Text/: Subscript.hs
common/Text/ParserCombinators/ReadP/: Unambiguous.hs
day01/: Day01.hs  day01.cabal  default.nix
day02/: Day02.hs  day02.cabal
day03/: Day03.hs  day03.cabal
day04/: Day04.hs  day04.cabal
day05/: Day05.hs  day05.cabal
day06/: Day06.hs  day06.cabal
day07/: Day07.hs  day07.cabal
day08/: Day08.hs  day08.cabal
day09/: Day09.hs  day09.cabal  default.nix
day10/: Day10.hs  day10.cabal
day11/: Day11.hs  day11.cabal
day12/: Day12.hs  day12.cabal
day13/: Day13.hs  day13.cabal
day14/: Day14.hs  day14.cabal
day15/: Day15.hs  day15.cabal
day16/: Day16.hs  day16.cabal
template/: DayX.hs  dayX.cabal
