cabal-version: 1.12

name:           common
version:        0.0.0
build-type:     Simple

library
  ghc-options:
    -O2
    -threaded
    -rtsopts -with-rtsopts=-N
  exposed-modules:
    Data.Chart
    Data.Graph.Search
    Data.Vector.V2
    Text.ParserCombinators.ReadP.Unambiguous
    Text.Subscript
  build-depends:
    base >=4.7 && <5,
    hashable,
    containers,
    unordered-containers,
    psqueues
  default-language: Haskell2010
