cabal-version: 1.12

name:           day03
version:        0.0.0
build-type:     Simple

executable day03
  main-is: Day03.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts -with-rtsopts=-N
  data-files:
    input
  build-depends:
    base >=4.7 && <5,
    containers
  default-language: Haskell2010
