cabal-version: 1.12

name:           day08
version:        0.0.0
build-type:     Simple

executable day08
  main-is: Day08.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts "-with-rtsopts=-N -A256M"
  data-files:
    input
  build-depends:
    base >=4.7 && <5,
    containers,
    common
  default-language: Haskell2010
