cabal-version: 1.12

name:           day09
version:        0.0.0
build-type:     Simple

executable day09
  main-is: Day09.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts -with-rtsopts=-N
  data-files:
    input
  build-depends:
    base >=4.7 && <5,
    containers,
    common
  default-language: Haskell2010
