cabal-version: 1.12

name:           day16
version:        0.0.0
build-type:     Simple

executable day16
  main-is: Day16.hs
  ghc-options:
    -O2
    -threaded
    -rtsopts -with-rtsopts=-N
  data-files:
    input
  build-depends:
    base >=4.7 && <5,
    containers,
    common,
    hashable,
    unordered-containers
  default-language: Haskell2010
